2013-07-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Better handling of register-pressure in lospre (try not to separate condition from ifx).

2013-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Better handling of register-pressure in lospre (reduction of live-ranges of operands).

2013-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp:
	  Fix invalidation in lospre forwarding.

2013-07-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for better handling of register-pressure in lospre (reduction of live-ranges of operands).

2013-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Improve handling of register-pressure in lospre (introduced temporaries).

2013-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc:
	  Mark receive opcodes as invalidating for losrpe.

2013-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for better handling of register-pressure in lospre.

2013-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* sdccconf_in.h:
	  Regenerated to make --disable-stm8-port work.

2013-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for better handling of register-pressure in lospre.

2013-06-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCBBlock.c,
	  src/SDCCopt.c,
	  src/SDCClospre.hpp:
	  Preparations for better handling of register-pressure in lospre.

2013-06-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.cc:
	  Disable safety in division for stm8.

2013-06-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCnaddr.hpp:
	  Add comment to reference the paper on bank selection.

2013-06-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def: