@@ -2251,7 +2251,7 @@ avr_assignRegisters (ebbIndex * ebbi)
 
 	/* liveranges probably changed by register packing
 	   so we compute them again */
-	recomputeLiveRanges (ebbs, count);
+	recomputeLiveRanges (ebbs, count, FALSE);
 
 	if (options.dump_pack)
 		dumpEbbsToFileExt (DUMP_PACK, ebbi);
