@@ -3308,7 +3308,7 @@ ds390_assignRegisters (ebbIndex * ebbi)
 
   /* liveranges probably changed by register packing
      so we compute them again */
-  recomputeLiveRanges (ebbs, count);
+  recomputeLiveRanges (ebbs, count, FALSE);
 
   if (options.dump_pack)
     dumpEbbsToFileExt (DUMP_PACK, ebbi);
